# substrate-minimal-node

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/storage/: Cargo.toml
pallets/storage/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: frame_config.rs  lib.rs  precompiles.rs
