[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = ""
authors = []
repository = ""


[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
panic = "unwind"