[package]
name = "min-pallet-storage"
description = "A minimal storage pallet built with FRAME."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }

frame = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false, features = [
	"experimental",
	"runtime",
] }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }

[features]
default = ['std']
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'sp-std/std',
]
